1990-04-27  dickey@software.org

	* src/version.h:
	corrections/modifications to pathname resolution to try to
	avoid confusion in ".." sequences with symbolic links vs bugs
	found when invoking ded while su'ing.  To do this, reduced
	usage of 'abspath()' in favor of 'abshome()'.

1990-04-27  ste_cm@software.org

	* src/version.h: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

1990-04-25  dickey@software.org

	* src/dedscan.c:
	corrected code which tries to circumvent unreadable old_wd
	(had broken the 'R' command in that fix...)

1990-04-25  ste_cm@software.org

	* src/dedscan.c: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

1990-04-25  dickey@software.org

	* src/dedscan.c:
	refined pathname-conversion using 'abshome()' followed by
	'getwd()' when needed, rather than 'abspath()' to avoid
	confusion with symbolic links.

1990-04-24  dickey@software.org

	* src/ded2s.c:
	corrected 'time2s()' to handle dates past coming midnight

1990-04-24  ste_cm@software.org

	* src/ded2s.c: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

	* src/ded2s.c: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-04-24  dickey@software.org

	* src/dedscan.c:
	modified 'argstat()' so that if shell (e.g., Bourne) passes
	a "~" argument, we expand it properly.

1990-04-23  dickey@software.org

	* src/dedscan.c:
	modify initial 'chdir()' so we try to recover from unreadable
	directory (e.g., when invoking "su" from a protected directory)

1990-04-18  dickey@software.org

	* src/version.h:
	correction to 'E' command (following symbolic link to file).
	invoke 'rcslast()' to show "RCS,v" (permit-file) version.

	* src/Makefile: updated include-dependency for 'dedscan.c'

1990-04-18  ste_cm@software.org

	* src/Makefile: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

	* src/Makefile: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-04-18  dickey@software.org

	* src/dedscan.c:
	invoke 'rcslast()' to pick up information about permit-file
	(e.g., "RCS,v").
